--- a/movieapp/src/Components/Footer.css
+++ b/movieapp/src/Components/Footer.css
@@ -1,6 +1,7 @@
 .footer {
   text-align: center;
-  background-color: blanchedalmond;
+  background-color: #383838;
+  color: white;
   height: 30px;
   line-height: 30px;
   font-size: 15px;
