--- a/movieapp/src/index.css
+++ b/movieapp/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background-color: #141414;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -13,7 +14,7 @@ code {
     monospace;
 }
 main {
-  min-height: 90vh;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
 }
